Trying one more time

--- a/index.html
+++ b/index.html
@@ -190,14 +190,14 @@
         <p>Aproveite o tempo de recolhimento, use-o para o autoconhecimento.<br>
         Busque a paz e harmonia, pois daí vem a alegria.</p>
     </article>
-  <article class="poema">
+  <div class="poema">
     <p>Nunca estamos sós, em nosso caminhar.<br>
         O que realmente importa, é nos conectar.</p>
     <p>Para que o mundo se transforme, basta crer.<br>
       Mude primeiro, você vai ver.</p>
       <p>Estou livre de medo e incerteza, expulso agora miséria e pobreza.<br>
         A pura abundância estou ciente, dos reinos do alto é proveniente.</p>
-  </article></div>
+  </div></div>
     <aside class="lado-esquerdo">
       <p>Estou muito feliz por fazer parte da Trybe, realmente é uma experiência única.</p>
       <p>Tenho certeza de que minha vida nunca mais será a mesma!</p>
