invertendo sessão e artigo

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </nav>
         </header>
         <main>
-            <img id="minha_foto" src="images/fotome.jpg" alt="Vinicius Palenske">
+            <img id="minha_foto" src="images/fotome.jpg" alt="Vinicius Palenske, 27 anos. Estudante da Trybe">
             <div id="caixa_licoes">
                 <h2>Habilidades</h2>
                 <ol class="lado-esquerdo" id="licoes_aprendidas">
@@ -56,9 +56,9 @@
                     <em>– Olá, meu nome é Vinicius Palenske e tenho 27 anos. Me sinto cada vez mais próximo do sucesso na carreira em tecnologia graças a <a href="http://betrybe.com/" target="_blank" <spam style="color:teal; font-weight: bold; text-decoration: none;">Trybe</spam>!</em></a>
                 </p>
             </section>
-            <article class="artigo">
+            <section class="artigo">
                 <h2>Processo de aprendizagem ativa</h2>
-                <section class="sessao" id="texto-principal">
+                <article class="sessao" id="texto-principal">
                     <h3>Dias na tribo</h3>
                     <p>
                         Aguardei o inicio do curso com muito entusiasmo, preparei todo o ambiente de estudo e decidi me dedicar ao máximo nessa jornada.
@@ -69,18 +69,18 @@
                     <p>
                         Um jovem padauan guiado pelo mestre Gabriel Oliva.
                     </p>
-                </section>
-            </article>
+                </article>
+            </section>
         </main>
-        <aside id="canto">
+        <section id="canto">
             <h2>Momentos de aprendizado</h2>
-            <section class="sessao">
+            <aside class="sessao">
                 <h3>O dia em que eu aprendi a usar o Github</h3><br>
                 <p style="text-align: right; font-size: small;">
                     <em>E então conheci a ferramenta que me acompanhá por todo o resto de minha vida como programador...</em>
                 </p><br>
                 <p>
-                    Custei a entender o propósito do GitHub em meu primeiro contato, achei complicado e até desnecessário. Eu poderia muito bem guardar meus trabalhos no Drive (risos). Na verdade eu sentia o github uma coisa muito distante, coisa que só <i>Devs</i> experientes usavam em seus projetos open-source para salvar vidas de usuários aflitos com o linux (eu).
+                    Custei a entender o propósito do GitHub em meu primeiro contato, achei complicado e até desnecessário. Eu poderia muito bem guardar meus trabalhos no Drive (risos). Na verdade eu sentia o github uma coisa muito distante, coisa que só <em>Devs</em> experientes usavam em seus projetos open-source para salvar vidas de usuários aflitos com o linux (eu).
                 </p> 
                 <p>
                     Mas graças a comunidade da <spam style="color:teal; font-weight: bold;">Trybe</spam> eu tive a oportunidade de conhecer o passo a passo de como usar o GitHub na prática. E cá estou realizando meu primeiro projeto tranquilamente, sem perder uma vírgula do meu código, com muitos commits, pushs e reviews. 
@@ -88,10 +88,10 @@
                 <p>
                     O git foi complicado no começo em questão de organização do espaço de trabalho. Mas como todo conhecimento novo, a prática fez a coisa começar a fazer sentido. E foi assim que segui aprendendo as outras lições que a <spam style="color:teal; font-weight: bold;">Trybe</spam> ofereceu: com muita prática e desafio!
                 </p>
-            </section>
+            </aside>
             <div id="tabela">
                 <h2>Difilcudade das lições</h2>
-                <table id="dificuldade_skills">
+                <table class="dificuldade_skills">
                     <tr>
                         <th>Conteúdo</th>
                         <th>Fácil</th>
@@ -99,50 +99,50 @@
                         <th>Difícil</th>
                     </tr>
                     <tr>
-                        <th> Soft-Skills </th>
-                        <td></td>
-                        <td>X</td>
-                        <td></td>
+                        <td class="tdheader">Soft-Skills</td>
+                        <td class="tdline"></td>
+                        <td class="tdline">X</td>
+                        <td class="tdline"></td>
                     </tr>
                     <tr>
-                        <th> Unix & Bash </th>
-                        <td>X</td>
-                        <td></td>
-                        <td></td>
+                        <td class="tdheader">Unix & Bash</td>
+                        <td class="tdline">X</td>
+                        <td class="tdline"></td>
+                        <td class="tdline"></td>
                     </tr>
                     <tr>
-                        <th> Git & GitHub </th>
-                        <td></td>
-                        <td></td>
-                        <td>X</td>
+                        <td class="tdheader">Git & GitHub</td>
+                        <td class="tdline"></td>
+                        <td class="tdline"></td>
+                        <td class="tdline">X</td>
                     </tr>
                     <tr>
-                        <th> HTML </t>
-                        <td></td>
-                        <td>X</td>
-                        <td></td>
+                        <td class="tdheader">HTML</td>
+                        <td class="tdline"></td>
+                        <td class="tdline">X</td>
+                        <td class="tdline"></td>
                     </tr>
                     <tr>
-                        <th> CSS </th>
-                        <td></td>
-                        <td></td>
-                        <td>X</td>
+                        <td class="tdheader">CSS</td>
+                        <td class="tdline"></td>
+                        <td class="tdline"></td>
+                        <td class="tdline">X</td>
                     </tr>
                     <tr>
-                        <th> HTML Semântico </th>
-                        <td></td>
-                        <td>X</td>
-                        <td></td>
+                        <td class="tdheader">HTML Semântico</td>
+                        <td class="tdline"></td>
+                        <td class="tdline">X</td>
+                        <td class="tdline"></td>
                     </tr>
                 </table>
             </div>
             <p>Díficuldade relativa ao encarar o aprendizado proposto pela <spam style="color:teal; font-weight: bold;">Trybe</spam></p>
-        </aside>
+        </section>
         <footer id="rodape"> <p>Todos os direitos reservados.
             <div id="contact">
-            <a href="https://github.com/palenske" target="_blank"><img class="contactpic" src="images/git.jpg"></a>
-            <a href="https://www.linkedin.com/in/vinicius-palenske-7229a81ba/" target="_blank"><img class="contactpic" src="images/linke.jpg"></a>
-            <a href="https://api.whatsapp.com/send?phone=554198064428&text=Ol%C3%A1%2C%20quero%20comprar%20um%20site!" target="_blank"><img class="contactpic" src="images/wpp.jpg"></a>
+            <a href="https://github.com/palenske" target="_blank"><img class="contactpic" src="images/git.jpg" alt="GitHubMe, my code lab"></a>
+            <a href="https://www.linkedin.com/in/vinicius-palenske-7229a81ba/" target="_blank"><img class="contactpic" src="images/linke.jpg" alt="LinkedinMe, Work connection"></a>
+            <a href="https://api.whatsapp.com/send?phone=554198064428&text=Ol%C3%A1%2C%20quero%20comprar%20um%20site!" target="_blank"><img class="contactpic" src="images/wpp.jpg" alt="WhatsAppMe 9999-9999"></a>
             </div>- 2020, um ano muito louco -</p></footer>
     </body>
 </html>
