Now in the same div :raised_eyebrow:

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
               </li>
           </ul>
       </section>
-    </main>
+    </main><div>
     <div class="lado-direito">
     <article class="poema">
       <p>Em tempos de turbulência, nunca perca a paciência.<br>
@@ -201,7 +201,7 @@
     <aside class="lado-esquerdo">
       <p>Estou muito feliz por fazer parte da Trybe, realmente é uma experiência única.</p>
       <p>Tenho certeza de que minha vida nunca mais será a mesma!</p>
-    </aside>
+    </aside></div>
     <footer id="rodape">
         <p>Criado por <a href="https://www.linkedin.com/in/kevincfraga/" target="_blank">Kevin Fraga</a>. </p>
     </footer>
