--- a/index.html
+++ b/index.html
@@ -22,27 +22,15 @@
         <ol id="licoes_aprendidas">
           <li>
             Zoom
-            <img
-              class="icon"
-              src="assets/zoom.jpeg"
-              alt="ícone do zoom"
-            />
+            <img class="icon" src="assets/zoom.jpeg" alt="ícone do zoom" />
           </li>
           <li>
             Slack
-            <img
-              class="icon"
-              src="assets/slack.png"
-              alt="ícone do slack"
-            />
+            <img class="icon" src="assets/slack.png" alt="ícone do slack" />
           </li>
           <li>
             Unix
-            <img
-              class="icon"
-              src="assets/linux.jpeg"
-              alt="ícone do linux"
-            />
+            <img class="icon" src="assets/linux.jpeg" alt="ícone do linux" />
           </li>
           <li>
             Internet
@@ -54,19 +42,11 @@
           </li>
           <li>
             Git
-            <img
-              class="icon"
-              src="assets/git.png"
-              alt="ícone do git"
-            />
+            <img class="icon" src="assets/git.png" alt="ícone do git" />
           </li>
           <li>
             GitHub
-            <img
-              class="icon"
-              src="assets/github.png"
-              alt="ícone do github"
-            />
+            <img class="icon" src="assets/github.png" alt="ícone do github" />
           </li>
           <li>
             w3schools
@@ -78,132 +58,144 @@
           </li>
           <li>
             HTML
-            <img
-              class="icon"
-              src="assets/html.png"
-              alt="ícone do html"
-            />
+            <img class="icon" src="assets/html.png" alt="ícone do html" />
           </li>
           <li>
             CSS
-            <img
-              class="icon"
-              src="assets/css.jpeg"
-              alt="ícone do css"
-            />
+            <img class="icon" src="assets/css.jpeg" alt="ícone do css" />
           </li>
           <li>
             Inspect
-            <img
-              class="icon"
-              src="assets/inspect.png"
-              alt="ícone do inspect"
-            />
+            <img class="icon" src="assets/inspect.png" alt="ícone do inspect" />
           </li>
         </ol>
       </section>
       <section id="nao-aprendidas">
-          <h2>Lições a Aprender</h2>
-          <ul id="licoes_a_aprender">
-            <li>
-                JavaScript
-                <img
-                  class="icon"
-                  src="assets/js.png"
-                  alt="ícone do JavaScript"
-                />
-              </li><li>
-                SQL
-                <img
-                  class="icon"
-                  src="assets/sql.jpeg"
-                  alt="ícone do sql"
-                />
-              </li><li>
-                React
-                <img
-                  class="icon"
-                  src="assets/react.png"
-                  alt="ícone do react"
-                />
-              </li><li>
-                Node
-                <img
-                  class="icon"
-                  src="assets/node.png"
-                  alt="ícone do node"
-                />
-              </li><li>
-                DOM
-                <img
-                  class="icon"
-                  src="assets/dom.png"
-                  alt="ícone do dom"
-                />
-              </li><li>
-                CSS Responsivo
-                <img
-                  class="icon"
-                  src="assets/css-resp.png"
-                  alt="ícone do css responsivo"
-                />
-              </li><li>
-                ES6
-                <img
-                  class="icon"
-                  src="assets/es6.jpeg"
-                  alt="ícone do es6"
-                />
-              </li><li>
-                Jest
-                <img
-                  class="icon"
-                  src="assets/jest.png"
-                  alt="ícone do jest"
-                />
-              </li><li>
-                Unit Test
-                <img
-                  class="icon"
-                  src="assets/unit.jpeg"
-                  alt="ícone do unit test"
-                />
-              </li><li>
-                Forms
-                <img
-                  class="icon"
-                  src="assets/form.png"
-                  alt="ícone do forms"
-                />
-              </li>
-          </ul>
+        <h2>Lições a Aprender</h2>
+        <ul id="licoes_a_aprender">
+          <li>
+            JavaScript
+            <img class="icon" src="assets/js.png" alt="ícone do JavaScript" />
+          </li>
+          <li>
+            SQL
+            <img class="icon" src="assets/sql.jpeg" alt="ícone do sql" />
+          </li>
+          <li>
+            React
+            <img class="icon" src="assets/react.png" alt="ícone do react" />
+          </li>
+          <li>
+            Node
+            <img class="icon" src="assets/node.png" alt="ícone do node" />
+          </li>
+          <li>
+            DOM
+            <img class="icon" src="assets/dom.png" alt="ícone do dom" />
+          </li>
+          <li>
+            CSS Responsivo
+            <img
+              class="icon"
+              src="assets/css-resp.png"
+              alt="ícone do css responsivo"
+            />
+          </li>
+          <li>
+            ES6
+            <img class="icon" src="assets/es6.jpeg" alt="ícone do es6" />
+          </li>
+          <li>
+            Jest
+            <img class="icon" src="assets/jest.png" alt="ícone do jest" />
+          </li>
+          <li>
+            Unit Test
+            <img class="icon" src="assets/unit.jpeg" alt="ícone do unit test" />
+          </li>
+          <li>
+            Forms
+            <img class="icon" src="assets/form.png" alt="ícone do forms" />
+          </li>
+        </ul>
       </section>
-    </main><div>
-    <div class="lado-direito">
-    <article class="poema">
-      <p>Em tempos de turbulência, nunca perca a paciência.<br>
-        Estamos chegando no final, desse ano sem igual.</p>
-        <p>Seja qual for sua jornada, mantenha a fé em sua empreitada.<br>
-        Os desafios virão, te abalar é a intenção.</p>
-        <p>Seja grato por eles, pois essa é a provisão.<br>
-        Na zona de conforto, não há evolução.</p>
-        <p>Aproveite o tempo de recolhimento, use-o para o autoconhecimento.<br>
-        Busque a paz e harmonia, pois daí vem a alegria.</p>
-    </article>
-  <div class="poema">
-    <p>Nunca estamos sós, em nosso caminhar.<br>
-        O que realmente importa, é nos conectar.</p>
-    <p>Para que o mundo se transforme, basta crer.<br>
-      Mude primeiro, você vai ver.</p>
-      <p>Estou livre de medo e incerteza, expulso agora miséria e pobreza.<br>
-        A pura abundância estou ciente, dos reinos do alto é proveniente.</p>
-  </div></div>
-    <aside class="lado-esquerdo">
-      <p>Estou muito feliz por fazer parte da Trybe, realmente é uma experiência única.</p>
-      <p>Tenho certeza de que minha vida nunca mais será a mesma!</p>
-    </aside></div>
+    </main>
+    <div>
+      <div class="lado-direito">
+        <article class="poema">
+          <p>
+            Em tempos de turbulência, nunca perca a paciência.<br />
+            Estamos chegando no final, desse ano sem igual.
+          </p>
+          <p>
+            Seja qual for sua jornada, mantenha a fé em sua empreitada.<br />
+            Os desafios virão, te abalar é a intenção.
+          </p>
+          <p>
+            Seja grato por eles, pois essa é a provisão.<br />
+            Na zona de conforto, não há evolução.
+          </p>
+          <p>
+            Aproveite o tempo de recolhimento, use-o para o autoconhecimento.<br />
+            Busque a paz e harmonia, pois daí vem a alegria.
+          </p>
+        </article>
+        <div class="poema">
+          <p>
+            Nunca estamos sós, em nosso caminhar.<br />
+            O que realmente importa, é nos conectar.
+          </p>
+          <p>
+            Para que o mundo se transforme, basta crer.<br />
+            Mude primeiro, você vai ver.
+          </p>
+          <p>
+            Estou livre de medo e incerteza, expulso agora miséria e pobreza.<br />
+            A pura abundância estou ciente, dos reinos do alto é proveniente.
+          </p>
+        </div>
+      </div>
+      <aside class="lado-esquerdo">
+        <p>
+          Estou muito feliz por fazer parte da Trybe, realmente é uma
+          experiência única.
+        </p>
+        <p>Tenho certeza de que minha vida nunca mais será a mesma!</p>
+      </aside>
+    </div>
+    <nav>
+      <table>
+        <tr>
+          <th>Vamos nos conectar?</th>
+        </tr>
+        <tr>
+          <td>LinkedIn</td>
+          <td>
+            <a href="https://www.linkedin.com/in/kevincfraga/" target="_blank"
+              ><img
+                class="icon"
+                src="assets/linkedin.png"
+                alt="ícone do linkedin"
+            /></a>
+          </td>
+        </tr>
+        <tr>
+          <td>GitHub</td>
+          <td>
+            <a href="https://github.com/KevinFraga" target="_blank"
+              ><img class="icon" src="assets/github.png" alt="ícone do github"
+            /></a>
+          </td>
+        </tr>
+      </table>
+    </nav>
     <footer id="rodape">
-        <p>Criado por <a href="https://www.linkedin.com/in/kevincfraga/" target="_blank">Kevin Fraga</a>. </p>
+      <p>
+        Criado por
+        <a href="https://www.linkedin.com/in/kevincfraga/" target="_blank"
+          >Kevin Fraga</a
+        >.
+      </p>
     </footer>
   </body>
 </html>
