--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </section>
     <section>
       <h2>Lições</h2>
-      <article>
+      <section>
         <h3>Lições aprendidas</h3>
         <ol id="licoes_aprendidas">
           <li>lição</li>
@@ -31,8 +31,8 @@
           <li>lição</li>
           <li>lição</li>
         </ol>
-      </article>
-      <article>
+      </section>
+      <section>
         <h3>Lições a aprender</h3>
         <ul id="licoes_a_aprender">
           <li>lição</li>
@@ -46,7 +46,7 @@
           <li>lição</li>
           <li>lição</li>
         </ul>
-      </article>
+      </section>
       <article>
         <h2>Meu querido aprendizado</h2>
         <p>Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum</p>
