mudanca da semantica4

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
       <img id="minha_foto" src="WhatsApp Image 2020-11-13 at 11.58.02 PM (3).jpeg" alt="Foto do Bernardo">
     </figure>
     <div id="lista1">
-    <h2>Lista das lições já esenvolvimento Web</li>
+    <ol id="licoes_aprendidas"></ol>
+    <h2>Lista das lições já esenvolvimento Web</h2>
       <li>Introdução Unix & Shell</li>
       <li>Conhecimento sobre Unix & Bash</li>
       <li>Conhecimento sobre a Internet</li>
@@ -36,8 +37,7 @@
       <li>HTML Semântico</li>
       <li>Git</li>
       <li>Github</li>aprendidas</h2>
-    <ol id="licoes_aprendidas">
-      <li>Fundamentos do D
+      <li>Fundamentos do Desenvolviento Web </li>
       <li>Empatia</li>
       <li>Inspect</li>
     </ol>
