Criando um aside sobre uma passagem do meu aprendizado

--- a/index.html
+++ b/index.html
@@ -47,11 +47,23 @@
           <li>lição</li>
         </ul>
       </section>
+    </section>
+    <section>
       <article>
         <h2>Meu querido aprendizado</h2>
-        <p>Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum</p>
+        <p>
+          Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum.
+        </p>
       </article>
-    </section>
+      <aside>
+        <h2>
+          Quando eu aprendir GitHub
+        </h2>
+        <p>
+          Lembro que quando eu estava aprendendo Git achei impressionante como os arquivos sumiam e apareciam nas pastas ao mudar de brench.
+        </p>
+      </aside>
+    </section>  
   </main>
     <footer id="rodape">
       <p>© André Chiapetta 2020.</p>
