--- a/index.html
+++ b/index.html
@@ -13,37 +13,38 @@
 <body>
     <header id="cabecalho">
         <h1 id="titulo">Lessons Learned | Trybe</h1>
-        <a href="/">Home</a>
-        <a href="/">Login</a>
+        <nav>
+            <a href="">Home</a>
+            <a href="">Login</a>
+        </nav>
     </header>
     <br> <br> <br> <br> <br>
     <img id="minha_foto" src="pictures/perfil.jpeg" alt="Foto de Perfil">
-    <nav>
-        <a href="https://hnq-brt.github.io/" target="_blank">Portfolio | Lucas Henrique</a>
-    </nav>
+    <br>
+    <a id="portfolio" href="https://hnq-brt.github.io/" target="_blank">Portfolio | Lucas Henrique</a>
     <ol id="licoes_aprendidas">
-        <li>exemplo0</li>
-        <li>exemplo1</li>
-        <li>exemplo2</li>
-        <li>exemplo3</li>
-        <li>exemplo4</li>
-        <li>exemplo5</li>
-        <li>exemplo6</li>
-        <li>exemplo7</li>
-        <li>exemplo8</li>
-        <li>exemplo9</li>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>Git</li>
+        <li>GitHub</li>
+        <li>Unix</li>
+        <li>Semantic HTML</li>
+        <li>Slack</li>
+        <li>Zoom</li>
+        <li>Empatia</li>
+        <li>Inteligência Emocional</li>
     </ol>
     <ul id="licoes_a_aprender">
-        <li>exemplo0</li>
-        <li>exemplo1</li>
-        <li>exemplo2</li>
-        <li>exemplo3</li>
-        <li>exemplo4</li>
-        <li>exemplo5</li>
-        <li>exemplo6</li>
-        <li>exemplo7</li>
-        <li>exemplo8</li>
-        <li>exemplo9</li>
+        <li>Javascript</li>
+        <li>DOM</li>
+        <li>SQL</li>
+        <li>React</li>
+        <li>Node.js</li>
+        <li>Unit Tests</li>
+        <li>CSS Responsive</li>
+        <li>HOF</li>
+        <li>Forms</li>
+        <li>ES6</li>
     </ul>
     <table>
         <tr>
@@ -56,27 +57,27 @@
         </tr>
         <tr>
             <td>Eletrônica</td>
-            <td>Inteligência Social</td>
-        </tr>
-        <tr>
-            <td>Design</td>
             <td>Inteligência Emocional</td>
         </tr>
         <tr>
+            <td>Design</td>
+            <td>Inteligência Social</td>
+        </tr>
+        <tr>
             <td>Música</td>
-            <td>Empatia</td>
+            <td>Automotivação</td>
         </tr>
         <tr>
             <td>Jogos</td>
-            <td>Automotivação</td>
+            <td>Empatia</td>
         </tr>
-      </table>
+    </table>
     <br>
-    <article class="lado-esquerdo">Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum</article>
+    <article class="lado-esquerdo">Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum</article>
     <section class="lado-direito">
-        <aside>Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum</aside>
+        <aside>Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum</aside>
     </section>
-    <footer id="rodape"></footer>
+    <footer id="rodape">Página criada por Lucas Henrique da Silva Brito</footer>
 </body>
 
 </html>
