mudanca da semantica6

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </figure>
     <div id="lista1">
       <h2>Lista das lições já aprendidas</h2>
-    <ol id="licoes_aprendidas"></ol>
+    <ol id="licoes_aprendidas">
     
       <li>Introdução Unix & Shell</li>
       <li>Conhecimento sobre Unix & Bash</li>
