Tentando deixar mais acessível

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <h1 id="titulo">Lições da - Trybe!</h1>
   </header>
   <main>
-    <section>
+    <nav>
       <img id="minha_foto" src="img/104f3ac6-0e37-4b36-9543-6d8cc515c2d8.jpg" alt="Foto de um Homem segurando um bebê">
       <a href="https://www.linkedin.com/in/andre-chiapetta" target="_blank">André Chiapetta</a>
-    </section>
+    </nav>
     <section>
       <h2>Lições</h2>
       <section>
