--- a/index.html
+++ b/index.html
@@ -64,6 +64,27 @@
         </p>
       </aside>
     </section>
+    <section>
+      <h3>Minhas redes</h3>
+      <table>
+        <tr>
+          <th>Linkedin:</th>
+          <td>https://www.linkedin.com/in/andre-chiapetta</td>
+        </tr>
+        <tr>
+          <th>GitHub:</th>
+          <td>https://github.com/Andrechiapetta</td>
+        </tr>
+        <tr>
+          <th>FaceBook:</th>
+          <td>https://www.facebook.com/dede.chiapetta</td>
+        </tr>
+        <tr>
+          <th>Instagram:</th>
+          <td>https://www.instagram.com/dedechiapetta</td>
+        </tr>
+      </table>
+    </section>
   </main>
     <footer id="rodape">
       <p>© André Chiapetta 2020.</p>
