--- a/index.html
+++ b/index.html
@@ -1,25 +1,26 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-    <head>
-        <meta charset="UTF-8">
-        <title>Lessons Learned</title>
-        <link rel="stylesheet" type="text/css" href="style.css">
-        <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Acme&display=swap">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap">
-    </head>
-    <body>
-        <header id=cabecalho>
-            <h1 id="titulo">Lições aprendidas - <spam style="color:teal; font-weight: bold;">Trybe</spam>!</h1>
-            <nav id="menu">
-                <ul>
-                    <li><a href="#top">Ínicio</a></li>
-                    <li><a href="#top">Habilidades</a></li>
-                    <li><a href="#rodape">Contato</a></li>
-                </ul>
-            </nav>
-        </header>
-        <main>
+<head>
+    <meta charset="UTF-8">
+    <title>Lessons Learned Trybe :rocket:</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Acme&display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap">
+</head>
+<header id=cabecalho>
+    <h1 id="titulo">Lições aprendidas - <spam class="trybe">Trybe</spam>!</h1>
+    <nav id="menu">
+        <ul>
+            <li><a href="#top">Ínicio</a></li>
+            <li><a href="#top">Habilidades</a></li>
+            <li><a href="#rodape">Contato</a></li>
+        </ul>
+    </nav>
+</header>
+<body>
+    <main>
+        <section>
             <img id="minha_foto" src="images/fotome.jpg" alt="Vinicius Palenske, 27 anos. Estudante da Trybe">
             <div id="caixa_licoes">
                 <h2>Habilidades</h2>
@@ -39,110 +40,96 @@
                 <ul class="lado-direito" id="licoes_a_aprender">
                     <h3>Lições a aprender</h3>
                     <li>Mais soft skills</li>
-                    <li>Desenvolvimento pessoal</li>
-                    <li>Rotina de desenvolvimento</li>
+                    <li>Medotologias ágeis</li>
                     <li>JavaScript</li>
                     <li>React</li>
-                    <li>Python</li>
                     <li>SQL</li>
-                    <li>Node</li>
-                    <li>Express.js</li>
-                    <li>Ciência da computação</li>
+                    <li>REST</li>
+                    <li>Lógica de programação</li>
+                    <li>Python</li>
+                    <li>Arquitetura de computadores</li>
+                    <li>Ciência da computação (intro)</li>
                 </ul>
             </div>
-            <section id="sobremim">
-                <h2>Sobre mim</h2>
-                <p>
-                    <em>– Olá, meu nome é Vinicius Palenske e tenho 27 anos. Me sinto cada vez mais próximo do sucesso na carreira em tecnologia graças a <a href="http://betrybe.com/" target="_blank" <spam style="color:teal; font-weight: bold; text-decoration: none;">Trybe</spam>!</em></a>
-                </p>
-            </section>
-            <section class="artigo">
-                <h2>Processo de aprendizagem ativa</h2>
-                <article class="sessao" id="texto-principal">
-                    <h3>Dias na tribo</h3>
-                    <p>
-                        Aguardei o inicio do curso com muito entusiasmo, preparei todo o ambiente de estudo e decidi me dedicar ao máximo nessa jornada.
-                    </p>
-                    <p>
-                        Logo no inicio percebi que a trybe tinha um diferencial, uma proposta sincera e inédita a respeito de carreira e aprendizado. A preocupação com o sucesso da pessoa estudante era muito evidente e isso me confortou. Tive uma sensação de estar sendo guiado pra algo maior, algo que eu nem imagino o que seja, mas eu sentia que iria dar certo.
-                    </p>
-                    <p>
-                        Um jovem padauan guiado pelo mestre Gabriel Oliva.
-                    </p>
-                </article>
-            </section>
-        </main>
-        <section id="canto">
-            <h2>Momentos de aprendizado</h2>
-            <aside class="sessao">
-                <h3>O dia em que eu aprendi a usar o Github</h3><br>
-                <p style="text-align: right; font-size: small;">
-                    <em>E então conheci a ferramenta que me acompanhá por todo o resto de minha vida como programador...</em>
-                </p><br>
-                <p>
-                    Custei a entender o propósito do GitHub em meu primeiro contato, achei complicado e até desnecessário. Eu poderia muito bem guardar meus trabalhos no Drive (risos). Na verdade eu sentia o github uma coisa muito distante, coisa que só <em>Devs</em> experientes usavam em seus projetos open-source para salvar vidas de usuários aflitos com o linux (eu).
-                </p> 
-                <p>
-                    Mas graças a comunidade da <spam style="color:teal; font-weight: bold;">Trybe</spam> eu tive a oportunidade de conhecer o passo a passo de como usar o GitHub na prática. E cá estou realizando meu primeiro projeto tranquilamente, sem perder uma vírgula do meu código, com muitos commits, pushs e reviews. 
-                </p>
-                <p>
-                    O git foi complicado no começo em questão de organização do espaço de trabalho. Mas como todo conhecimento novo, a prática fez a coisa começar a fazer sentido. E foi assim que segui aprendendo as outras lições que a <spam style="color:teal; font-weight: bold;">Trybe</spam> ofereceu: com muita prática e desafio!
-                </p>
-            </aside>
-            <div id="tabela">
-                <h2>Difilcudade das lições</h2>
-                <table class="dificuldade_skills">
-                    <tr>
-                        <th>Conteúdo</th>
-                        <th>Fácil</th>
-                        <th>Médio</th>
-                        <th>Difícil</th>
-                    </tr>
-                    <tr>
-                        <td class="tdheader">Soft-Skills</td>
-                        <td class="tdline"></td>
-                        <td class="tdline">X</td>
-                        <td class="tdline"></td>
-                    </tr>
-                    <tr>
-                        <td class="tdheader">Unix & Bash</td>
-                        <td class="tdline">X</td>
-                        <td class="tdline"></td>
-                        <td class="tdline"></td>
-                    </tr>
-                    <tr>
-                        <td class="tdheader">Git & GitHub</td>
-                        <td class="tdline"></td>
-                        <td class="tdline"></td>
-                        <td class="tdline">X</td>
-                    </tr>
-                    <tr>
-                        <td class="tdheader">HTML</td>
-                        <td class="tdline"></td>
-                        <td class="tdline">X</td>
-                        <td class="tdline"></td>
-                    </tr>
-                    <tr>
-                        <td class="tdheader">CSS</td>
-                        <td class="tdline"></td>
-                        <td class="tdline"></td>
-                        <td class="tdline">X</td>
-                    </tr>
-                    <tr>
-                        <td class="tdheader">HTML Semântico</td>
-                        <td class="tdline"></td>
-                        <td class="tdline">X</td>
-                        <td class="tdline"></td>
-                    </tr>
-                </table>
-            </div>
-            <p>Díficuldade relativa ao encarar o aprendizado proposto pela <spam style="color:teal; font-weight: bold;">Trybe</spam></p>
         </section>
-        <footer id="rodape"> <p>Todos os direitos reservados.
-            <div id="contact">
-            <a href="https://github.com/palenske" target="_blank"><img class="contactpic" src="images/git.jpg" alt="GitHubMe, my code lab"></a>
-            <a href="https://www.linkedin.com/in/vinicius-palenske-7229a81ba/" target="_blank"><img class="contactpic" src="images/linke.jpg" alt="LinkedinMe, Work connection"></a>
-            <a href="https://api.whatsapp.com/send?phone=554198064428&text=Ol%C3%A1%2C%20quero%20comprar%20um%20site!" target="_blank"><img class="contactpic" src="images/wpp.jpg" alt="WhatsAppMe 9999-9999"></a>
-            </div>- 2020, um ano muito louco -</p></footer>
-    </body>
+        <section id="sobremim">
+            <h2>Sobre mim</h2>
+            <p><em>– Olá, meu nome é Vinicius Palenske e tenho 27 anos. Me sinto cada vez mais próximo do sucesso na carreira em tecnologia graças a <a href="http://betrybe.com/" target="_blank" <spam class="trybe">Trybe</spam>!</em></a></p>
+        </section>
+        <section class="sessao">
+            <h2>Processo de aprendizagem ativa</h2>
+            <article class="artigo" id="texto-principal">
+                <h3>Iniciado na tribo</h3>
+                <p>Aguardei o inicio do curso com muito entusiasmo, preparei todo o ambiente de estudo e decidi me dedicar ao máximo nessa jornada. Logo no inicio percebi que a trybe tinha um diferencial, uma proposta sincera e inédita a respeito de carreira e aprendizado. A preocupação com o sucesso da pessoa estudante era muito evidente e isso me confortou.</p>
+                <p>No entanto, a mesma mão que afaga, dale! Em pouco tempo o curso se mostrou muito desafiador, me fez ver o quanto eu estava enferrujado na informática em geral. Considerando minha aproximação de longa data com T.I.</p>
+                <p>O método de ensino <strong>ativo</strong> exige muita dedicação e esforço, e não é nada fácil. Mas podemos contar com suporte e apoio de uma comunidade incrível! Aqui a gente aprende na prática, na base da tentativa e erro, munido de uma vasta documentação e plantões para nos ajudar a visualizar o problema e absorver o aprendizado de forma prática e lúdica</p>
+            </article>
+        </section>
+    </main>
+    <aside class="sessao" id="canto">
+        <h2>Momentos de aprendizado</h2>
+            <h3>O dia em que eu aprendi a usar o Github</h3><br>
+            <p id="trexinho">
+                <em>E então conheci a ferramenta que me acompanhá por todo o resto de minha vida como programador...</em>
+            </p>
+            <br>
+            <p>Nunca imaginei que um dia eu teria um perfil no GitHub! Para mim isso era uma coisa muito distante, de deuses da programação que disponibilavam soluções mágicas para aplicativos open-source. Meu contato com a plataforma era básica, apenas copiar o código e rodar na maquina.</p> 
+            <p>Mas graças a comunidade da <spam class="trybe">Trybe</spam> eu tive a oportunidade de conhecer o passo a passo de como usar o GitHub na prática. E cá estou realizando meu primeiro projeto tranquilamente, sem perder uma vírgula do meu código, com muitos commits, pushs e reviews.</p>
+            <p>O git foi complicado no começo em questão de organização do espaço de trabalho. Mas como todo conhecimento novo, a prática fez a coisa começar a fazer sentido. E foi assim que segui aprendendo as outras lições que a <spam class="trybe">Trybe</spam> ofereceu: com muita prática e desafio!</p>
+        <div id="tabela">
+            <h3>Difilcudade das lições</h2>
+            <table class="dificuldade_skills">
+                <tr>
+                    <th>Conteúdo</th>
+                    <th>Fácil</th>
+                    <th>Médio</th>
+                    <th>Difícil</th>
+                </tr>
+                <tr>
+                    <td class="tdheader">Soft-Skills</td>
+                    <td class="tdline"></td>
+                    <td class="tdline">X</td>
+                    <td class="tdline"></td>
+                </tr>
+                <tr>
+                    <td class="tdheader">Unix & Bash</td>
+                    <td class="tdline">X</td>
+                    <td class="tdline"></td>
+                    <td class="tdline"></td>
+                </tr>
+                <tr>
+                    <td class="tdheader">Git & GitHub</td>
+                    <td class="tdline"></td>
+                    <td class="tdline"></td>
+                    <td class="tdline">X</td>
+                </tr>
+                <tr>
+                    <td class="tdheader">HTML</td>
+                    <td class="tdline"></td>
+                    <td class="tdline">X</td>
+                    <td class="tdline"></td>
+                </tr>
+                <tr>
+                    <td class="tdheader">CSS</td>
+                    <td class="tdline"></td>
+                    <td class="tdline"></td>
+                    <td class="tdline">X</td>
+                </tr>
+                <tr>
+                    <td class="tdheader">HTML Semântico</td>
+                    <td class="tdline"></td>
+                    <td class="tdline">X</td>
+                    <td class="tdline"></td>
+                </tr>
+            </table>
+        </div>
+        <p>Relação de difículdade ao aprender os conteúdos passados pela <spam class="trybe">Trybe</spam></p>
+    </aside>
+    <footer id="rodape"> <p>Todos os direitos reservados.
+        <div id="contact">
+        <a href="https://github.com/palenske" target="_blank"><img class="contactpic" src="images/git.jpg" alt="GitHubMe, my code lab"></a>
+        <a href="https://www.linkedin.com/in/vinicius-palenske-7229a81ba/" target="_blank"><img class="contactpic" src="images/linke.jpg" alt="LinkedinMe, Work connection"></a>
+        <a href="https://api.whatsapp.com/send?phone=554198064428&text=Ol%C3%A1%2C%20quero%20comprar%20um%20site!" target="_blank"><img class="contactpic" src="images/wpp.jpg" alt="WhatsAppMe 9999-9999"></a>
+        </div>- 2020, um ano muito louco -</p></footer>
+</body>
 </html>
