--- a/index.html
+++ b/index.html
@@ -56,20 +56,18 @@
             <h2>Sobre mim</h2>
             <p><em>– Olá, meu nome é Vinicius Palenske e tenho 27 anos. Me sinto cada vez mais próximo do sucesso na carreira em tecnologia graças a <a href="http://betrybe.com/" target="_blank" <spam class="trybe">Trybe</spam>!</em></a></p>
         </section>
-        <section class="sessao">
+        
             <article class="artigo" id="texto-principal"><h2>Processo de aprendizagem ativa</h2>
                 <p>Aguardei o inicio do curso com muito entusiasmo, preparei todo o ambiente de estudo e decidi me dedicar ao máximo nessa jornada. Logo no inicio percebi que a <spam class="trybe">trybe</spam> tinha um diferencial, uma proposta sincera e inédita a respeito de carreira e aprendizado. A preocupação com o sucesso da pessoa estudante era muito evidente e isso me confortou.</p>
                 <p>No entanto, a mesma mão que afaga, dale! Em pouco tempo o curso se mostrou muito desafiador, me fez ver o quanto eu estava enferrujado na informática em geral. Considerando minha aproximação de longa data com T.I.</p>
                 <p>O método de ensino <strong>ativo</strong> exige muita dedicação e esforço, e não é nada fácil. Mas podemos contar com suporte e apoio de uma comunidade incrível! Aqui a gente aprende na prática, na base da tentativa e erro, munido de uma vasta documentação e plantões para nos ajudar a visualizar o problema e absorver o aprendizado de forma prática e lúdica</p>
             </article>
-        </section>
+        
     </main>
     <aside class="sessao" id="canto"><h2>Momentos de aprendizado</h2>
             <h3>O dia em que eu aprendi a usar o Github</h3><br>
-            <p id="trexinho">
-                <em>E então conheci a ferramenta que me acompanhá por todo o resto de minha vida como programador...</em>
-            </p><br>
-            <p>Nunca imaginei que um dia eu teria um perfil no GitHub! Para mim isso era uma coisa muito distante, de deuses da programação que disponibilavam soluções mágicas para aplicativos open-source. Meu contato com a plataforma era básica, apenas copiar o código e rodar na maquina.</p> 
+            <p id="trexinho"><em>E então conheci a ferramenta que me acompanhá por todo o resto de minha vida como programador...</em>
+            </p><br><p>Nunca imaginei que um dia eu teria um perfil no GitHub! Para mim isso era uma coisa muito distante, de deuses da programação que disponibilavam soluções mágicas para aplicativos open-source. Meu contato com a plataforma era básica, apenas copiar o código e rodar na maquina.</p> 
             <p>Mas graças a comunidade da <spam class="trybe">Trybe</spam> eu tive a oportunidade de conhecer o passo a passo de como usar o GitHub na prática. E cá estou realizando meu primeiro projeto tranquilamente, sem perder uma vírgula do meu código, com muitos commits, pushs e reviews.</p>
             <p>O git foi complicado no começo em questão de organização do espaço de trabalho. Mas como todo conhecimento novo, a prática fez a coisa começar a fazer sentido. E foi assim que segui aprendendo as outras lições que a <spam class="trybe">Trybe</spam> ofereceu: com muita prática e desafio!</p>
         <div id="tabela">
