--- a/index.html
+++ b/index.html
@@ -8,14 +8,6 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Acme&display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap">
 </head>
-<head>
-    <meta charset="UTF-8">
-    <title>Lessons Learned Trybe :rocket:</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Acme&display=swap">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap">
-</head>
 <header id=cabecalho>
     <h1 id="titulo">Lições aprendidas - <spam class="trybe">Trybe</spam>!</h1>
     <nav id="menu">
@@ -72,9 +64,11 @@
             </article>
         
     </main>
-    <aside class="sessao" id="canto">
-        <h2>O dia em que eu aprendi a usar o Github</h2>
-            <p>Nunca imaginei que um dia eu teria um perfil no GitHub! Mas graças a comunidade da <spam class="trybe">Trybe</spam> eu tive a oportunidade de conhecer o passo a passo de como usar o Git na prática.</p> 
+    <section id="canto">
+        <aside class="sessao">
+            <h2>O dia em que eu aprendi a usar o Github</h2>
+                <p>Nunca imaginei que um dia eu teria um perfil no GitHub! Mas graças a comunidade da <spam class="trybe">Trybe</spam> eu tive a oportunidade de conhecer o passo a passo de como usar o Git na prática.</p> 
+        </aside>
         <div id="tabela">
             <h3>Difilcudade das lições</h2>
             <table class="dificuldade_skills">
@@ -122,7 +116,7 @@
                 </tr>
             </table>
         </div>
-    </aside>
+    </section>
     <footer id="rodape"> <p>Todos os direitos reservados.
         <div id="contact">
         <a href="https://github.com/palenske" target="_blank"><img class="contactpic" src="images/git.jpg" alt="GitHubMe, my code lab"></a>
