--- a/index.html
+++ b/index.html
@@ -62,7 +62,9 @@
         </article>
     </main>
     <section id="canto">
-        <aside class="sessao"><h2>O dia em que eu aprendi a usar o Github</h2><p>Nunca imaginei que um dia eu teria um perfil no GitHub! Mas graças a comunidade da <spam class="trybe">Trybe</spam> eu tive a oportunidade de conhecer o passo a passo de como usar o Git na prática.</p> 
+        <aside class="sessao">
+            <h2>O dia em que eu aprendi a usar o Github</h2>
+            <p>Nunca imaginei que um dia eu teria um perfil no GitHub! Mas graças a comunidade da <spam class="trybe">Trybe</spam> eu tive a oportunidade de conhecer o passo a passo de como usar o Git na prática.</p> 
         </aside>
         <div id="tabela"><h3>Difilcudade das lições</h2>
             <table class="dificuldade_skills">
@@ -111,7 +113,7 @@
             </table>
         </div>
     </section>
-    <footer id="rodape"> <p>Todos os direitos reservados.
+    <footer id="rodape"> <p style="font-size: 20px;">Todos os direitos reservados.
         <div id="contact">
         <a href="https://github.com/palenske" target="_blank"><img class="contactpic" src="images/git.jpg" alt="GitHubMe, my code lab"></a>
         <a href="https://www.linkedin.com/in/vinicius-palenske-7229a81ba/" target="_blank"><img class="contactpic" src="images/linke.jpg" alt="LinkedinMe, Work connection"></a>
