alteração da fonte

--- a/index.html
+++ b/index.html
@@ -62,8 +62,7 @@
         </article>
     </main>
     <section id="canto">
-        <aside class="sessao">
-            <h2>O dia em que eu aprendi a usar o Github</h2><p>Nunca imaginei que um dia eu teria um perfil no GitHub! Mas graças a comunidade da <spam class="trybe">Trybe</spam> eu tive a oportunidade de conhecer o passo a passo de como usar o Git na prática.</p> 
+        <aside class="sessao"><h2>O dia em que eu aprendi a usar o Github</h2><p>Nunca imaginei que um dia eu teria um perfil no GitHub! Mas graças a comunidade da <spam class="trybe">Trybe</spam> eu tive a oportunidade de conhecer o passo a passo de como usar o Git na prática.</p> 
         </aside>
         <div id="tabela"><h3>Difilcudade das lições</h2>
             <table class="dificuldade_skills">
