--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <body>
   <header id="cabecalho">
     <div id="banner">
-      <h1 id="titulo">
+      <h2 id="titulo">
         Lições Aprendidas - Trybe
-      </h1>
+      </h2>
       <img id="minha_foto" src="https://avatars1.githubusercontent.com/u/66654653?s=460&u=c99615034de62600eda9617441035c26fe045751&v=4" alt="Foto do Marcus">
       <a href="index.html">Home</a>
       <a href="https://github.com/marcusWittho" target="_blanck">GitHub</a>
@@ -68,7 +68,7 @@
 </body>
 <footer id="rodape">
   <p>
-    Todos os direitos reservados, Marcus Lima Witthoeft.
+    Todos os direitos reservados, <a href="http://github.com/marcusWittho"> Marcus Lima Witthoeft</a>.
   </p>
 </footer>
 </html>
