Add transiction to the picture

--- a/index.html
+++ b/index.html
@@ -12,15 +12,22 @@
             <h1 id="titulo">Lessons Learned | Trybe</h1>
         </header>
         <aside id="sidebar">
-            <img id="minha_foto" src="pamela.jpeg" alt="Foto de Pamela Anderson Sales">
-            <h2 class="caption">Pamela Sales</h2>
-            <nav id="navigation"><h3 class="side-titles">Menu</h3>
-                <div class="menu1"><a href="#licoes_aprendidas">Lições aprendidas</a></div><br>
-                <span class="menu2"><a href="#licoes_a_aprender">Lições a aprender</a></span><br>
-            </nav>
-            <h3 class="side-titles">Colaboração</h3>
-            <section class="side-article"><em>"A Trybe se preocupa com as Soft Skills e com eles estou evoluindo muito o meu espírito colaborativo."</em>
-            </section>
+            <div class="container">
+                <img id="minha_foto" src="pamela.jpeg" alt="Foto de Pamela Anderson Sales">
+                <div class="overlay">
+                    <h2 class="caption">Pamela Sales</h2>
+                </div>
+            </div>
+            <h2 class="name">Pamela Sales</h2>
+            <div class="sidebar-content">
+                <nav id="navigation"><h3 class="side-titles">Menu</h3>
+                    <div class="menu1"><a href="#licoes_aprendidas">Lições aprendidas</a></div><br>
+                    <span class="menu2"><a href="#licoes_a_aprender">Lições a aprender</a></span><br>
+                </nav>
+                <h3 class="side-titles">Colaboração</h3>
+                <section class="side-article"><em>"A Trybe se preocupa com as Soft Skills e com eles estou evoluindo muito o meu espírito colaborativo."</em>
+                </section>
+            </div>
         </aside>
         <div id="wrap">
             <main>
