--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
             <div class="container">
                 <img id="minha_foto" src="pamela.jpeg" alt="Foto de Pamela Anderson Sales">
                 <div class="overlay">
-                    <h2 class="caption">Pamela Sales</h2>
+                    <h2 class="caption">Pamela</h2>
                 </div>
                 <h2 class="name">Pamela Sales</h2>
                 <nav id="navigation"><h3 class="side-titles">Menu</h3>
-                    <div class="menu1"><a href="#licoes_aprendidas">Lições aprendidas</a></div><br>
-                    <span class="menu2"><a href="#licoes_a_aprender">Lições a aprender</a></span><br>
+                    <div class="menu1"><a href="#licoes_aprendidas">Lições aprendidas</a></div>
+                    <span class="menu2"><a href="#licoes_a_aprender">Lições a aprender</a></span>
                 </nav>
             </div>
             <div class="sidebar-content">
