--- a/index.html
+++ b/index.html
@@ -8,21 +8,21 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
-    <header id="cabecalho" id="titulo">
-    <h1> Projeto 1 - Lições aprendidas</h1>
-    </header>
+    <header id="cabecalho"><h1 id="titulo"> Projeto 1 - Lições aprendidas</h1></header>
+
 <body>
-    <img src ="oie_7mbgcqpjn3sh.jpg" id="minha_foto">
-    <article id="text"> <h2>As duas primeiras semanas na Trybe</h2>
+    <img src ="oie_7mbgcqpjn3sh.jpg" id="minha_foto" alt="minha foto">
+    <h2>As duas primeiras semanas na Trybe</h2>
+    <article class="lado-esquerdo"> 
      <p>Lorem ipsum dolor sit amet nibh laoreet lacus ante sit justo primis pharetra pretium vivamus aliquet luctus eu tristique cras maecenas enim fames aliquam habitant risus vestibulum mattis nunc aliquam erat neque at justo ultrices lobortis duis eget nulla risus nibh imperdiet vehicula vehicula mollis luctus molestie morbi est sed risus quisque nostra nibh aliquam gravida tincidunt est magna fermentum velit augue sit consectetur vel aenean nullam quisque nisi luctus gravida mollis nunc tristique eget suspendisse fusce platea turpis a urna netus himenaeos est platea gravida ,orci suscipit potenti auctor scelerisque nunc taciti rutrum blandit iaculis ultricies lorem odio hac etiam phasellus.</p>
      <p>Lorem ipsum dolor sit amet porttitor curae adipiscing mattis hendrerit aenean elementum justo vulputate bibendum luctus massa habitasse vivamus nostra ac tellus egestas cras risus dictumst tincidunt ipsum quis curabitur egestas feugiat pulvinar nibh ultricies nunc ligula dapibus at nunc nostra volutpat bibendum velit molestie ipsum erat curae pulvinar arcu condimentum Pvelit malesuada aenean a hendrerit sollicitudin magna risus curabitur etiam scelerisque inceptos semper nostra consequat felis inceptos tempor phasellus gravida morbi iaculis erat praesent urna venenatis nibh nec quisque elit laoreet lorem nibh sem in sit lorem mauris aliquet vestibulum dictumst iaculis torquent nec etiam sapien.</p>
-     <p>Lorem ipsum dolor sit amet primis praesent urna a id dolor varius vulputate facilisis morbi consectetur mollis neque aliquet vel blandit enim ullamcorper faucibus rutrum tincidunt gravida quisque amet integer convallis rutrum ac etiam commodo ipsum in orci lobortis pharetra tincidunt pellentesque risus litora nisl torquent at vivamus orci porta netus senectus libero luctus donec integer tincidunt aliquet molestie dictum ornare vivamus sed himenaeos accumsan elit pharetra lacus rhoncus eros nisl tortor bibendum eu sed scelerisque non condimentum et bibendum tortor urna nam malesuada bibendum tincidunt a tempor quisque eget quisque vitae.</p>
+     <p>Lorem ipsum dolor sit amet primis praesent urna a id dolor varius vulputate facilisis morbi consectetur mollis neque aliquet vel blandit enim ullamcorper faucibus rutrum tincidunt gravida quisque amet integer convallis rutrum ac etiam commodo ipsum in orci lobortis pharetra tincidunt pellentesque risus litora nisl torquent at vivamus orci porta netus senectus libero luctus donec integer tincidunt aliquet molestie dictum ornare vivamus sed himenaeos accumsan elit pharetra lacus rhoncus eros nisl tortor bibendum eu sed scelerisque non condimentum et bibendum tortor urna nam malesuada bibendum tincidunt a tempor quisque eget quisque vitae.</p>    </article>
 
-    <aside id ="side"><h3> Expextativas </h3>Lorem ipsum dolor sit amet leo tempus tortor dictum pellentesque quis felis non sem at eget sit nec nec praesent aliquam lacinia fermentum auctor potenti purus vestibulum amet integer lacus justo eget purus volutpat gravida ad donec at justo quisque porta nec per viverra vivamus rhoncus aenean justo suspendisse sem blandit congue a platea laoreet morbi mollis laoreet senectus vehicula hendrerit ante cursus cras quis rhoncus potenti suspendisse faucibus enim molestie class hendrerit est sit nunc consectetur ultrices consectetur vestibulum a turpis porta nisi lacinia sagittis mi aliquet vivamus vulputate nulla lobortis vel diam arcu iaculis nisi vestibulum lacinia consectetur malesuada faucibus facilisis per vel consequat quisque senectus imperdiet quis inceptos scelerisque imperdiet lacus dui mi vehicula pharetra maecenas dictum.
-        </aside>
+
+     <section><aside class ="lado-direito"><h3> ExpecP
+         tativas </h3>Lorem ipsum dolor sit amet leo tempus tortor dictum pellentesque quis felis non sem at eget sit nec nec praesent aliquam lacinia fermentum auctor potenti purus vestibulum amet integer lacus justo eget purus volutpat gravida ad donec at justo quisque porta nec per viverra vivamus rhoncus aenean justo suspendisse sem blandit congue a platea laoreet morbi mollis laoreet senectus vehicula hendrerit ante cursus cras quis rhoncus potenti suspendisse faucibus enim molestie class hendrerit est sit nunc consectetur ultrices consectetur vestibulum a turpis porta nisi lacinia sagittis mi aliquet vivamus vulputate nulla lobortis vel diam arcu iaculis nisi vestibulum lacinia consectetur malesuada faucibus facilisis per vel consequat quisque senectus imperdiet quis inceptos scelerisque imperdiet lacus dui mi vehicula pharetra maecenas dictum.
+        </aside></section>
             <nav><a href="https://github.com/MarinaAlane" target="_blank">GitHub</a></nav>
-            <section> 
-
                 <ol id="licoes_aprendidas"><h3> Lições aprendidas</h3>
                         <li>ehsgf</li>
                         <li>wuefhj</li>
@@ -48,10 +48,6 @@
                         <li>gasjhdjksndffkvc</li>
                         <li>afsogjklkgf</li>
                     </ul>
-
-                </section>
-    </article>
-
 
 
 
