--- a/index.html
+++ b/index.html
@@ -14,11 +14,10 @@
             </ol>
         </nav>
     </header>
-    <img id="minha_foto"src="1.jpg" alt="Super metroid">
+    <img id="minha_foto" src="1.jpg" alt="Super metroid" />
 </head>
-<body>
-    <main id=main_part>
-        <article>
+    <body>
+        <article id="main_part">
             <h2>O que dizer até agora?</h2>
             <aside>
                 <p>Para fixar esse conteúdo, realize os dois exercícios a seguir. Para realizar o exercício, abra o link e leia o enunciado do desafio.</p>
@@ -26,10 +25,10 @@
             <p>Para fixar esse conteúdo, realize os dois exercícios a seguir. Para realizar o exercício, abra o link e leia o enunciado do desafio. Após entender o que foi pedido, desenvolva a solução e então verifique se você conseguiu cumprir com o que foi solicitado. Ao finalizar o exercício, feche a página, retorne ao conteúdo e abra o próximo exercício
             </p>
         </article>
-    </main>    
-     <div>
+  
+         <div>
              <h2 class="list">Lições</h2>
-     </div>
+         </div>
              <div class="list">
                  <h3>Aprendidas</h3>
                      <ol id="licoes_aprendidas">
@@ -60,9 +59,9 @@
                           <li>SQL</li>
                   </ul>
              </div>
-    <footer id="rodape">
+        <footer id="rodape">
         <p>A repetição é a chave para o aprendizado.</p> 
         <nav id="cytus"> <a href="https://cytus.fandom.com/wiki/Xenon" target="_blank">"?????"</a></nav> 
-    </footer>
-<body>
+        </footer>
+    <body>
 </html>
