Alteraçoes nas clases lado-esquerdo e lado-direito, e da section

--- a/index.html
+++ b/index.html
@@ -58,15 +58,15 @@
         </table>
     </div>
     <div class="textos">
-        <article class="lado_esquerdo">
+        <article class="lado-esquerdo">
                 A Trybe é muito mais do que somente uma escola que forma programador@s. Ela é muito mais que isso. 
                 Por meio, de um estudo intenso que forma desenvolvedor@s extremamente capacitad@s, há também, seres humanos melhores,
                 que aprenderam a ouvir o outro, lidar com problemas assertivamente, a colaborar sempre e a ter empatia com o próximo.
         </article>
-        <section class="lado_direito">
+        <section class="lado-direito">
             <aside>
                 Em três semanas de estudo na Trybe, consegui aprender conteúdos, que demorei meses para aprender em outros cursos.
-                Mesmo com 11 meses e 1 semana, para completar a minha formação, posso dizer que essa foi uma das melhores decisões
+                Mesmo com 11 meses e 1 semana, para com a minha formação, posso dizer que essa foi uma das melhores decisões
                 que já fiz.
             </aside>
         </section>
