--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <section class="lado-direito">
             <aside>
                 Em três semanas de estudo na Trybe, consegui aprender conteúdos, que demorei meses para aprender em outros cursos.
-                Mesmo com 11 meses e 1 semana, para com a minha formação, posso dizer que essa foi uma das melhores decisões
+                Mesmo com 11 meses e 1 semana, para comgit a minha formação, posso dizer que essa foi uma das melhores decisões
                 que já fiz.
             </aside>
         </section>
