--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
     </div>
 
     <footer id="rodape">
-            <a class="ft" href="https://www.linkedin.com/in/sabrina-a-689816124/" target="_blank"><img id="icone" src="Linkedin-icon.png"/></a>
-            <a class="ft" href="https://github.com/Sabrinadelpache" target="_blank"><img id="icone" src="Github-icon.png"/></a>
+            <a class="ft" href="https://www.linkedin.com/in/sabrina-a-689816124/" target="_blank" alt="Logo do Linkedin"><img id="icone" src="Linkedin-icon.png"/></a>
+            <a class="ft" href="https://github.com/Sabrinadelpache" target="_blank" alt="ícone do GitHub"><img id="icone" src="Github-icon.png"/></a>
         <span class="sf">Made w/ love and creativity</span>
     </footer>
 </body>
