--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
 </head>
 <body>
     <header id="cabecalho">
-        <h1 id="titulo">Renato Benage</h1>
+        <h1 id="titulo">Lições aprendidas - Trybe</h1>
     </header>
+
+    <main>
+        <img src="minha-foto.jpg" alt=" foto Renato github">
+    </main>
 
 </body>
 </html>
