--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </header>
 
     <main>
-        <img src="minha-foto.jpg" alt=" foto Renato github">
+        <img id="minha_foto" src="minha-foto.jpg" alt=" foto Renato github">
     </main>
 
 </body>
